Added UBP with cplex

--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,9 @@ scipy = "*"
 networkx = "*"
 matplotlib = "*"
 pytest = "*"
+coptpy = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.10"
-python_full_version = "3.10.6"
