--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-coptpy~=6.5.4
-numpy~=1.25.0
-PuLP~=2.7.0
+coptpy~=7.1.1
+numpy~=1.24.4
+PuLP~=2.8.0
 networkx~=3.1
 matplotlib~=3.7.1
+pytest~=8.0.0
+docplex~=2.25.236
