--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ coptpy~=7.1.1
 numpy~=1.24.4
 PuLP~=2.8.0
 networkx~=3.1
-matplotlib~=3.7.1
-pytest~=8.0.0
+matplotlib~=3.7.5
+pytest~=8.1.1
+python-dateutil~=2.9.0.post0
 docplex~=2.25.236
